P-11: Fixed AboutMe height on mobiles

--- a/src/components/about-me/AboutMe.scss
+++ b/src/components/about-me/AboutMe.scss
@@ -9,7 +9,7 @@
   justify-content: space-evenly;
 
   @media (max-width: $md-breakpoint) {
-    height: 85vh;
+    min-height: 85vh;
   }
 
   .socials {
